Fix footer spacing

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
-<footer style="text-align:left; color:#888; font-size:0.95em; position:fixed; left:1rem; bottom:0rem; right:1rem; width:100%; background:#fff; border-top:1px solid #eee; z-index:100;">
-  <div class="wrapper" style="padding: 1rem 0;">
-    <div style="margin-bottom:1rem;">
+<footer style="text-align:left; color:#888; font-size:0.8em; position:fixed; left:1rem; bottom:0rem; right:1rem; width:100%; background:#fff; border-top:1px solid #eee; z-index:100;">
+  <div class="wrapper" style="padding: .5rem;">
+    <div>
       Contact <a href="mailto:info@ohanasports.net">info@ohanasports.net</a>
       <br>
       &copy;2025 Ohana Sports Tech. All rights reserved.
