--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ page.title }} | {{ site.title }}</title>
     
+    <!-- Theme Color -->
+    <meta name="theme-color" content="#FFFFFF">
+    
     <!-- SEO Meta Tags -->
     <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
     
